add: database connection

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ DB_PASS=
 DB_NAME=
 DB_SSL_MODE=
 DB_TIMEZONE=
+PGADMIN_DEFAULT_EMAIL=
+PGADMIN_DEFAULT_PASS=
 
 # JWT settings
 JWT_API_SECRET_KEY=
