fix: path delete all v1 path , add: s3 init repo , add rounter folder

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,29 @@ JWT_ACCESS_TOKEN_SECRET=
 JWT_REFRESH_TOKEN_SECRET=
 JWT_ACCESS_TOKEN_EXPIRATION=
 JWT_REFRESH_TOKEN_EXPIRATION=
+
+# Email settings
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
+
+# Website settings
+RESET_PASSWORD_URL=
+
+# Omise settings
+OMISE_PUBLIC_KEY=
+OMISE_SECRET_KEY=
+
+# S3 Provider: "supabase" or "amazon"
+S3_PROVIDER=
+
+# Supabase credentials
+SUPABASE_URL=
+SUPABASE_ACCESS_KEY=
+SUPABASE_SECRET_KEY=
+
+# Amazon S3 credentials (if needed)
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
