--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,7 @@ OMISE_SECRET_KEY=
 S3_PROVIDER=
 
 # Supabase credentials
+SUPABASE_REGION=
 SUPABASE_URL=
 SUPABASE_ACCESS_KEY=
 SUPABASE_SECRET_KEY=
