--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,4 +47,7 @@ jobs:
         steps:
             - name: Deploy to Render
               run: |
-                  curl -X POST https://api.render.com/deploy/${{ secrets.RENDER_SERVICE_ID }}/
+                    curl -X POST https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys \
+                    -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+                    -H "Content-Type: application/json" \
+                    -d '{}'
