add:user update image and detial , fix : authcheck switch to checkuser ,fix : delete s3 use in frontend instead

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ SERVER_HOST=
 SERVER_PORT=
 
 # Database: PGSQL
+DB_URL=
 DB_HOST=
 DB_PORT=
 DB_USER=
@@ -35,17 +36,3 @@ RESET_PASSWORD_URL=
 # Omise settings
 OMISE_PUBLIC_KEY=
 OMISE_SECRET_KEY=
-
-# S3 Provider: "supabase" or "amazon"
-S3_PROVIDER=
-
-# Supabase credentials
-SUPABASE_REGION=
-SUPABASE_URL=
-SUPABASE_ACCESS_KEY=
-SUPABASE_SECRET_KEY=
-
-# Amazon S3 credentials (if needed)
-AWS_REGION=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
