--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
+# Client settings
+CLIENT_URL=
+
 # Server settings
-SERVER_NAME=
-SERVER_ENV=development
-SERVER_URL=
-SERVER_HOST=
+SERVER_ENV=
 SERVER_PORT=
 
 # Database: PGSQL
 DB_URL=
+
+# Database: docker
 DB_HOST=
 DB_PORT=
 DB_USER=
@@ -18,7 +20,6 @@ PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASS=
 
 # JWT settings
-JWT_API_SECRET_KEY=
 JWT_ACCESS_TOKEN_SECRET=
 JWT_REFRESH_TOKEN_SECRET=
 JWT_ACCESS_TOKEN_EXPIRATION=
