--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,12 @@ RESET_PASSWORD_URL=
 # Omise settings
 OMISE_PUBLIC_KEY=
 OMISE_SECRET_KEY=
+
+# S3 Provider: "supabase" or "amazon"
+S3_PROVIDER=supabase
+
+# Supabase credentials
+SUPABASE_REGION=
+SUPABASE_URL=
+SUPABASE_ACCESS_KEY=
+SUPABASE_SECRET_KEY=
